CSS(notes de marge)

--- a/src/essais/challenger-pratiques-transformation-organisationelle-par-le-design-de-services.html
+++ b/src/essais/challenger-pratiques-transformation-organisationelle-par-le-design-de-services.html
@@ -332,28 +332,9 @@ On nous apprend à valoriser les idées au-dessus de l’action, les choses spir
     des indicateurs de suivi certifiant que le projet ne va pas dans le mur.
   </li>
 </ul>
-<blockquote>
-  <p>Le manque d’intérêt et même quelquefois le rejet par les designers du
-    management et de la mesure de la valeur de leur activité. Or, en gestion,
-    pour exister et être tangible, il faut mesurer. Dans la pratique, les
-    designers auront tendance à se méfier du pouvoir des chiffres et à critiquer
-    le business vu comme la seule recherche du profit à court terme
-    <a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"
-      ><sup>2</sup></a
-    >
-  </p>
-</blockquote>
-<span class="footnote" id="fn2">
-  BORJA DE MOZOTA, Brigitte. Quarante ans de recherche en design management :
-  une revue de littérature et des pistes pour l’avenir.
-  <em>Sciences du design n°7 : Design Management</em>. Presses Universitaires de
-  France, 2018, p.28-45<a
-    href="#fnref2"
-    class="footnote-back"
-    role="doc-backlink"
-    >↩︎</a
-  >
-</span>
+{% citationsmarginales "BORJA DE MOZOTA, Brigitte. <em>Quarante ans de recherche en design management : une revue de littérature et des pistes pour l’avenir.</em> Sciences du design n°7 : Design Management. Presses Universitaires de France, 2018, p.28-45" %}
+Le manque d’intérêt et même quelquefois le rejet par les designers du management et de la mesure de la valeur de leur activité. Or, en gestion, pour exister et être tangible, il faut mesurer. Dans la pratique, les designers auront tendance à se méfier du pouvoir des chiffres et à critiquer le business vu comme la seule recherche du profit à court terme.
+{% endcitationsmarginales %}
 <p>On se retrouve alors avec des projets de design de service certes ancrés dans
   la réalité et actionnables mais qui ne sont pas viables sur le long terme ou
   alors qui n’entrent pas en cohérence avec les objectifs et la stratégie de
@@ -362,9 +343,10 @@ On nous apprend à valoriser les idées au-dessus de l’action, les choses spir
 <h2 id="ii.-doctrine-de-la-prédiction-à-lexpérimentation">
   II. Doctrine : de la prédiction à l’expérimentation
 </h2>
-<blockquote>
-  <p>
-    Le management est généralement orienté vers les questions d’efficience, là
+{% citationsmarginales "BLUM, Guillaume; COVA Véronique. Le design management en discussion.
+<em>Sciences du design n°7 : Design Management</em>. Presses Universitaires de
+France, 2018, p.21-27" %}
+Le management est généralement orienté vers les questions d’efficience, là
     où le design se tourne vers celles touchant à la conception créative.[…]
     Pourtant, les approches centrées sur la gestion de l’innovation et des
     connaissances tendent à montrer qu’elles ne s’opposent pas nécessairement.
@@ -372,25 +354,8 @@ On nous apprend à valoriser les idées au-dessus de l’action, les choses spir
     d’une plus grande efficacité. Mais aussi, une approche trop centrée sur les
     indicateurs d’efficacité est une approche planant au-dessus du réel sans en
     comprendre les enjeux. En fait, le design et le management, tel que chacun
-    devrait être exercé, se rencontrent dans leur approche concrète<a
-      href="#fn3"
-      class="footnote-ref"
-      id="fnref3"
-      role="doc-noteref"
-      ><sup>3</sup></a
-    >
-  </p>
-</blockquote>
-<span class="footnote" id="fn3">
-  BLUM, Guillaume; COVA Véronique. Le design management en discussion.
-  <em>Sciences du design n°7 : Design Management</em>. Presses Universitaires de
-  France, 2018, p.21-27<a
-    href="#fnref3"
-    class="footnote-back"
-    role="doc-backlink"
-    >↩︎</a
-  >
-</span>
+    devrait être exercé, se rencontrent dans leur approche concrète.
+{% endcitationsmarginales %}
 <p>
   Prédire et planifier est une partie essentielle des sciences du management.
   Nous budgétisons, planifions les ressources, établissons tâche par tâche le
@@ -416,35 +381,19 @@ On nous apprend à valoriser les idées au-dessus de l’action, les choses spir
     préconisations
   </li>
 </ul>
-<blockquote>
-  <p>Les consultants ont tendance à proposer des solutions rapides et
+{% citationsmarginales "MARCHAL, Aurélie citant Julia SCHAEPER qui présente un projet de
+transformation du secteur de la santé, par le design, du NHS (Sécurité Sociale
+britannique). <em
+>Innovation organisationnelle &amp; transformation managériale par le design
+thinking</em
+>. Paris : CreateSpace Independent Publishing Platform, 2011, p.10" %}
+Les consultants ont tendance à proposer des solutions rapides et
     opérationnelles mais sans se rendre compte que ces solutions ne répondent
     pas dans les faits à la véritable problématique. Ils mettent en œuvre leurs
     idées trop rapidement, pour ensuite réaliser qu’elles ne sont finalement pas
     pertinentes, et repassent du temps facturé à retravailler sur cette même
-    solution pour essayer de la rendre plus adaptée.<a
-      href="#fn4"
-      class="footnote-ref"
-      id="fnref4"
-      role="doc-noteref"
-      ><sup>4</sup></a
-    >
-  </p>
-</blockquote>
-<span class="footnote" id="fn4">
-  MARCHAL, Aurélie citant Julia SCHAEPER qui présente un projet de
-  transformation du secteur de la santé, par le design, du NHS (Sécurité Sociale
-  britannique).
-  <em
-    >Innovation organisationnelle &amp; transformation managériale par le design
-    thinking</em
-  >. Paris : CreateSpace Independent Publishing Platform, 2011, p.104<a
-    href="#fnref4"
-    class="footnote-back"
-    role="doc-backlink"
-    >↩︎</a
-  >
-</span>
+    solution pour essayer de la rendre plus adaptée.
+{% endcitationsmarginales %}
 <p>
   Ainsi, face à l’imprévisibilité des projets et à un focus trop axé “solution”
   il est nécessaire :
@@ -467,52 +416,28 @@ On nous apprend à valoriser les idées au-dessus de l’action, les choses spir
   Pourquoi s’inspirer de l’approche “mode produit” pour mener un projet de
   transformation organisationnelle
 </h3>
-<blockquote>
-  <p>
-    Regardless of where you sit in an organization, if you’re in a role that
+{% citationsmarginales "LOWE, Kristen. <em>Everyone is Building Something</em>. Extrait de la
+newsletter <a href='https://workbravely.substack.com/p/everyone-is-building-something'>Work Bravely</a>. 2024. [consulté le 20 Juin 2024]." %}
+Regardless of where you sit in an organization, if you’re in a role that
     owns a project or program of any type (or a piece of one), you are working
     on a product. Your customers might be your coworkers, and you probably call
     your product development lifecycle a change management or project management
     framework. But regardless of how you describe it, your work still involves
     picking, designing, testing, and launching something for someone else to
-    use. Kind of sounds like product development, no?<a
-      href="#fn5"
-      class="footnote-ref"
-      id="fnref5"
-      role="doc-noteref"
-      ><sup>5</sup></a
-    >
-  </p>
-</blockquote>
-<span class="footnote" id="fn5">
-  LOWE, Kristen. <em>Everyone is Building Something</em>. Extrait de la
-  newsletter Work Bravely. 2024. [consulté le 20 Juin 2024]. VF : "Peu importe
-  où vous vous trouvez dans une organisation, si vous occupez un poste qui
-  possède un projet ou un programme de tout type (ou une partie de celui-ci),
-  vous travaillez sur un produit. Vos clients peuvent être vos collègues, et
-  vous appelez probablement votre cycle de vie de développement de produit un
-  cadre de gestion du changement ou de gestion de projet. Mais quelle que soit
-  la façon dont vous le décrivez, votre travail consiste toujours à choisir,
-  concevoir, tester et lancer quelque chose que quelqu'un d'autre pourra
-  utiliser. Cela ressemble un peu au développement de produits, non ?"
-  Disponible à l’adresse :
-  https://workbravely.substack.com/p/everyone-is-building-something<a
-    href="#fnref5"
-    class="footnote-back"
-    role="doc-backlink"
-    >↩︎</a
-  >
-</span>
+    use. Kind of sounds like product development, no?
+{% endcitationsmarginales %}
 <p>
   Dans le secteur de la transformation organisationnelle, nous sommes peu
   habitués à considérer l’objet de notre travail comme un <em>produit</em>. En
   effet, que ce soit à travers un cycle de développement de projet, un
   diagnostic ou un plan d’action stratégique, la posture commune est plutôt
-  celle d’un <em>travailleur de la connaissance</em
-  ><a href="#fn6" class="footnote-ref" id="fnref6" role="doc-noteref"
-    ><sup>6</sup></a
-  >
-  qui analyse et qui confronte peu ses projections au terrain. Pourtant, adopter
+  celle d’un <em>travailleur de la connaissance</em>
+
+  {% citationsmarginales "Le terme <em>travailleur de la connaissance</em> désigne un employé dont le
+  travail consiste à développer et utiliser du savoir en back office plutôt que
+  de produire des marchandises ou des services. Celui-ci est apparu en premier
+  dans l’ouvrage The Landmarks of Tomorrow (1959) de Peter Drucker ‘knowledge
+  work’" %}{% endcitationsmarginales %} qui analyse et qui confronte peu ses projections au terrain. Pourtant, adopter
   le <em>mode produit</em> confère de nombreux avantages à un projet, et c’est
   ce que nous allons détailler ci-dessous. Mais qu’est-ce que le
   <em>mode produit</em> ?
@@ -533,13 +458,8 @@ On nous apprend à valoriser les idées au-dessus de l’action, les choses spir
   personne destinée à utiliser les fruits du projet : des collègues, un
   département, des fournisseurs, des clients…
 </p>
-<span class="footnote" id="fn6">
-  Le terme <em>travailleur de la connaissance</em> désigne un employé dont le
-  travail consiste à développer et utiliser du savoir en back office plutôt que
-  de produire des marchandises ou des services. Celui-ci est apparu en premier
-  dans l’ouvrage The Landmarks of Tomorrow (1959) de Peter Drucker ‘knowledge
-  work’<a href="#fnref6" class="footnote-back" role="doc-backlink">↩︎</a>
-</span>
+
+
 <p>
   Envisager un projet de transformation organisationnelle sous l’approche
   <em>produit</em> permet de centrer l’approche sur le besoin réel des parties
