CSS(sidenotes on mobile)

--- a/src/essais/challenger-pratiques-transformation-organisationelle-par-le-design-de-services.html
+++ b/src/essais/challenger-pratiques-transformation-organisationelle-par-le-design-de-services.html
@@ -1396,6 +1396,6 @@ Le développement d’une innovation ne repose pas sur la qualité intrinsèque
   MARCHAL, Aurélie. <a href="https://youtu.be/YNca99M6OoQ?feature=shared"><em>Planifier la transformation ?</em></a>. 2020.
 </p>
 <h2>Licence</h2>
-Contrairement aux autres contenus de ce site, cette page est sous licence CC BY-NC-ND : cette licence permet aux réutilisateurs de copier et de distribuer le matériel sur n'importe quel support ou format sous une forme non-remixée uniquement, à des fins non commerciales uniquement, et seulement tant que l'attribution est donnée au créateur.
+<p>Contrairement aux autres contenus de ce site, cette page est sous licence CC BY-NC-ND : cette licence permet aux réutilisateurs de copier et de distribuer le matériel sur n'importe quel support ou format sous une forme non-remixée uniquement, à des fins non commerciales uniquement, et seulement tant que l'attribution est donnée au créateur.</p>
 
 <img src="/img/licence-by-nc-nd.png" alt="licence-by-nc-nd">
