fix(inline notes)

--- a/src/essais/challenger-pratiques-transformation-organisationelle-par-le-design-de-services.html
+++ b/src/essais/challenger-pratiques-transformation-organisationelle-par-le-design-de-services.html
@@ -588,7 +588,7 @@ works one year might not work the following.
   <em
     >Innovation organisationnelle &amp; transformation managériale par le
     design thinking</em
-  >. Paris : CreateSpace Independent Publishing Platform, 2011, p.83<" %}
+  >. Paris : CreateSpace Independent Publishing Platform, 2011, p.83" %}
   Le design s’efforce de caractériser les usages, les expériences, les
   préférences. Il est par nature centré sur l’utilisateur et il a pour
   mission d’organiser ses solutions autour des individus et non pas autour
