--- a/src/index.html
+++ b/src/index.html
@@ -79,16 +79,16 @@ type: "Page"
 </div>
 
 <section id="homepage-brief" class="intersect">
-  <h2>Du code léger pour des projets web maîtrisés</h2>
+  <h2>Conduite de projets numériques et mains dans le code</h2>
   <article class="services">
     <ul>
       <li>
         <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="var(--txt)" viewBox="0 0 256 256"><path d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm45.66-93.66a8,8,0,0,1,0,11.32l-32,32a8,8,0,0,1-11.32-11.32L148.69,136H88a8,8,0,0,1,0-16h60.69l-18.35-18.34a8,8,0,0,1,11.32-11.32Z"></path></svg>
-        <span>Conception de sites web</span>
+        <span>Maîtrise d'oeuvre</span>
       </li>
       <li>
         <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="var(--txt)" viewBox="0 0 256 256"><path d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm45.66-93.66a8,8,0,0,1,0,11.32l-32,32a8,8,0,0,1-11.32-11.32L148.69,136H88a8,8,0,0,1,0-16h60.69l-18.35-18.34a8,8,0,0,1,11.32-11.32Z"></path></svg>
-        <span>Maintenance & refonte</span>
+        <span>Articulation entre les besoins métiers et les équipes de développement</span>
       </li>
       <li>
         <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="var(--txt)" viewBox="0 0 256 256"><path d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm45.66-93.66a8,8,0,0,1,0,11.32l-32,32a8,8,0,0,1-11.32-11.32L148.69,136H88a8,8,0,0,1,0-16h60.69l-18.35-18.34a8,8,0,0,1,11.32-11.32Z"></path></svg>
