plugin(img magnifier) & fix(colophon spacing)

--- a/src/colophon/colophon.html
+++ b/src/colophon/colophon.html
@@ -43,7 +43,7 @@ layout: "base.html"
 
   <!-- j'appelle les données de colophon.json pour présenter les projets -->
 
-<h2 style="margin-top: var(--baseline); margin-bottom: calc(.5*var(--baseline));">Blogroll</h2>
+<h2 style="margin-top: var(--rythme); margin-bottom: calc(.5*var(--rythme));">Blogroll</h2>
 <ul></ul>
 {% for item in outline.outline %}
   <li><a href="{{ item._htmlUrl }}">{{item._title}}</a></li>
