--- a/src/colophon/colophon.html
+++ b/src/colophon/colophon.html
@@ -6,11 +6,7 @@ layout: "base.html"
 ---
 <h1>Colophon</h1>
 <p>
-  Ce site <a href="https://1mb.club/">léger</a> et sans
-  <a href="https://fr.wikipedia.org/wiki/%C3%89conomie_de_la_surveillance"
-    >cookies</a
-  >
-  respecte vos données personnelles.
+  Ce site est fait main et [open-source](https://github.com/teotimepacreau/www.teotimepacreau.fr).
 </p>
 <p>
   Les 2 polices utilisées sont gratuites et open-source : Inter de
