--- a/src/colophon/colophon.html
+++ b/src/colophon/colophon.html
@@ -6,10 +6,10 @@ layout: "base.html"
 ---
 <h1>Colophon</h1>
 <p>
-  Ce site est fait main et [open-source](https://github.com/teotimepacreau/www.teotimepacreau.fr).
+  Ce site est fait main et <a href="https://github.com/teotimepacreau/www.teotimepacreau.fr">open-source</a>.
 </p>
 <p>
-  Les 2 polices utilisées sont gratuites et open-source : Inter de
+  Les 2 polices d'écriture utilisées sont gratuites et open-source : Inter de
   <a href="https://rsms.me/inter/">Rasmus Andersson</a>, une sans-serif
   particulièrement lisible, et Bricolage Grotesque de
   <a href="https://ateliertriay.github.io/bricolage/"
