changement image couverture essai

--- a/src/essais/essais.html
+++ b/src/essais/essais.html
@@ -26,7 +26,7 @@ layout: base.html
         href="./challenger-pratiques-transformation-organisationelle-par-le-design-de-services.html"
         ><img
           style="width: 100%; mix-blend-mode: multiply"
-          src="/img/pattern.webp"
+          src="/img/design_de_services_transformation_organisationnelle.png"
           aria-hidden="true"
       /></a>
     </article>
