--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -18,16 +18,11 @@ type: "Page"
   Expériences professionnelles
 </h2>
 <section aria-labelledby="experiences-pro-titre" id="experiences">
-  <time class="travail-time">2022-2024</time>
+  <time class="travail-time">2022-Mars 2025</time>
   <div aria-hidden="true" class="hr-parent"><hr /></div>
   <details class="travail-titre-poste">
     <summary aria-label="Titre du poste" class="travail-titre-poste">
-      Apprenti en conduite de projets numériques chez
-      <a
-        href="https://www.prefectures-regions.gouv.fr/pays-de-la-loire/Region-et-institutions/Organisation-administrative-de-la-region/Secretariat-General-pour-les-Affaires-Regionales-SGAR/Etat-LIN-le-Laboratoire-d-Innovation-Publique-de-l-Etat-en-region-Pays-de-la-Loire/Etat-LIN-qu-est-ce-que-c-est"
-        target="_blank"
-        >État'LIN, le laboratoire d'innovation publique de l'État en Pays de la
-        Loire</a
+      Apprenti en conduite de projets numériques au Ministère de l'Intérieur
       >
     </summary>
     <ul
@@ -36,28 +31,10 @@ type: "Page"
       class="travail-prose"
       id="desc-mission-1"
     >
-      <li>Conduite de 2 projets de transformation numérique
-        en phase cadrage et AMOA (via mode produit :
-        feuille de route produit, user stories, backlog,
-        coaching d'agents...).</li>
-      <li>
-        Appui aux services de l’État en Pays de la Loire dans
-leurs projets de conduite du changement (outillage
-organisationnel, diagnostic stratégique...) & mise en
-place de mode projet.
-      </li>
-      <li>
-        Collaboration en continu avec une équipe de designer de
-services : appropriation de la méthode <em>design</em>.
-      </li>
-      <li>
-        Co-animation du réseau des
-        <a
-          href="https://www.modernisation.gouv.fr/communautes/les-innovacteurs-de-la-transformation-publique"
-          >"Innov’acteurs de la transformation publique"</a
-        >
-        (réseau d'essaimage de l'innovation publique, 50 agents).
-      </li>
+<li>Conduite de projets de transformation numérique via mode produit : traduction des besoins métiers en exigences fonctionnelles, coordination, feuille de route produit, user stories, backlog, coaching d'agents...</li>
+<li>Appui aux services de l’État en Pays de la Loire dans leurs projets de conduite du changement (outillage organisationnel, diagnostic stratégique...) & mise en place de mode projet.</li>
+<li>Collaboration avec une équipe de designer de services : appropriation de la méthode design.</li>
+<li>Animation du réseau des "Innov’acteurs de la transformation publique" (réseau d'essaimage de l'innovation publique, 50 agents).</li>
     </ul>
   </details>
 
@@ -74,17 +51,10 @@ services : appropriation de la méthode <em>design</em>.
       class="travail-prose"
       id="desc-mission-1"
     >
-      <li>
-        Gestion commerciale de l'offre d'espaces du tiers-lieu
-        <a href="https://www.ecossolies.fr/-Le-Solilab-">Le Solilab</a>(106
-        espaces de travail, 3 espaces événementiels, 5 salles de réunion, 20
-        espaces de stockage).
-      </li>
-      <li>Coordination des prestataires.</li>
-      <li>
-        Actions de développement de la commercialisation (objectifs de CA,
-        optimisation des activités rentables).
-      </li>
+<li>Gestion locative du tiers-lieu "Le Solilab" des Ecossolies :  135 espaces de travails, 10 salles de réunion, espaces événementiels</li>
+<li>Coordination des prestataires</li>
+<li>Animation du site internet</li>
+<li>Prospection pour mettre en valeur l'offre commerciale</li>
     </ul>
   </details>
 
@@ -101,17 +71,9 @@ services : appropriation de la méthode <em>design</em>.
       class="travail-prose"
       id="desc-mission-1"
     >
-      <li>
-        Gestion du déploiement de la fibre optique sur le parc de 7000
-        logements.
-      </li>
-      <li>
-        Assistance au marché de maintenance énergétique, marché de relève des
-        compteurs, marché de déploiement des antennes téléphoniques Gestion
-        technique et administrative des marchés de diagnostic amiante et de la
-        télérelève des compteurs d'eau.
-      </li>
-      <li>Gestion administrative du service.</li>
+<li>Gestion du déploiement de la fibre optique sur le parc de 7000 logements</li>
+<li>Assistance au marché de maintenance énergétique, marché de relève des compteurs, marché de déploiement des antennes téléphoniques </li>
+<li>Gestion administrative du service</li>
     </ul>
   </details>
 
