suppression cv pdf

--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -5,14 +5,14 @@ layout: "base.html"
 type: "Page"
 ---
 
-<a
+<!-- <a disable
   aria-label="Télecharger mon CV"
   id="download-cv"
   target="_blank"
   href="/assets/CV_teotime_pacreau.pdf"
 >
   <span aria-hidden="true" class="ph ph-download"></span>
-</a>
+</a> -->
 <h1 class="visually-hidden">Mon curriculum vitae</h1>
 <h2 aria-hidden="true" id="experiences-pro-titre">
   Expériences professionnelles
