img ajoutee dans l'essai

--- a/src/essais/essais.html
+++ b/src/essais/essais.html
@@ -21,13 +21,10 @@ layout: base.html
           >14 novembre 2024</time
         >
       </header>
-      <a aria-hidden="true"
-        class="blog-card-title"
-        href="./challenger-pratiques-transformation-organisationelle-par-le-design-de-services.html"
-        ><img
-          style="width: 100%; mix-blend-mode: multiply"
+      <img
+          style="mix-blend-mode: luminosity;"
           src="/img/design_de_services_transformation_organisationnelle.png"
-          aria-hidden="true"
+          alt="Photographie dégradée en ASCII de Sherman Fairchild qui rend visite au centre de R&D de l'entreprise Fairchild avec Gordon Moore et Robert Noyce, 1965"
       /></a>
     </article>
   </section>
