--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -22,7 +22,7 @@ type: "Page"
   <div aria-hidden="true" class="hr-parent"><hr /></div>
   <details class="travail-titre-poste">
     <summary aria-label="Titre du poste" class="travail-titre-poste">
-      Apprenti en conduite de projets numériques au Ministère de l'Intérieur
+      Product Owner au Ministère de l'Intérieur
       >
     </summary>
     <ul
@@ -31,7 +31,7 @@ type: "Page"
       class="travail-prose"
       id="desc-mission-1"
     >
-<li>Conduite de projets de transformation numérique via mode produit : traduction des besoins métiers en exigences fonctionnelles, coordination, feuille de route produit, user stories, backlog, coaching d'agents...</li>
+<li>Conduite de projets de transformation numérique via mode produit : investigation des besoins métiers, spécification des US et exigences fonctionnelles, construction de la feuille de route produit, appui au prototypage (Figma, HTML, CSS, Design System de l'Etat), coordination du développement (lotissement, backlog), recettage.</li>
 <li>Appui aux services de l’État en Pays de la Loire dans leurs projets de conduite du changement (outillage organisationnel, diagnostic stratégique...) & mise en place de mode projet.</li>
 <li>Collaboration avec une équipe de designer de services : appropriation de la méthode design.</li>
 <li>Animation du réseau des "Innov’acteurs de la transformation publique" (réseau d'essaimage de l'innovation publique, 50 agents).</li>
