--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -179,14 +179,14 @@ type: "Page"
   <article class="card">
     <time class="time-diplomes">2017-2019</time>
     <span class="diplome-desc">
-      BTS Assistant de gestion en alternance à l'École Nantaise de Commerce
+      BTS Gestion des organisations en alternance à l'École Nantaise de Commerce
     </span>
   </article>
 
   <article class="card">
     <time class="time-diplomes">2016-2017</time>
     <span class="diplome-desc">
-      1ère année de BTS Assistant de gestion en initiale au Lycée Pierre Mendes
+      1ère année de BTS Gestion des organisations en initiale au Lycée Pierre Mendes
       France à La Roche sur Yon
     </span>
   </article>
@@ -213,9 +213,6 @@ type: "Page"
     <li>Javascript</li>
     <li>NodeJS</li>
     <li>
-      <a href="https://expressjs.com/fr/" target="_blank">Express</a>
-    </li>
-    <li>
       <a href="https://fastify.dev/" target="_blank">Fastify</a>
     </li>
     <li>Git, Github, Gitlab</li>
@@ -223,8 +220,11 @@ type: "Page"
       <a href="https://www.11ty.dev/" target="_blank">Eleventy</a>
     </li>
     <li>SQL</li>
-    <li>Modélisation de base de données relationnelles</li>
+    <li>Modélisation fonctionnelle (UML)</li>
+    <li>Modélisation de base de données relationnelles (Merise)</li>
+    <li>Gitlab CI/CD</li>
     <li>Docker</li>
+    <li>Linux</li>
   </ul>
 </section>
 
