enhance(html head, css)

--- a/src/colophon/colophon.html
+++ b/src/colophon/colophon.html
@@ -27,7 +27,7 @@ layout: "base.html"
     href="https://www.arthurperret.fr/cours/markdown.html"
     >Markdown</a
   >
-  et du peu de dépendances requises.
+  et du peu de dépendances requises. Les sites web statiques sont composés de fichiers prêts à être diffusés aux utilisateurs sans aucun traitement côté serveur ni base de données. Cette simplicité offre une moindre consommation de bande passante et d'énergie.
 </p>
 <p>
   Ce site suit les principes de l'IndieWeb, car j'aime être propriétaire de mon
